# aas-fdo-adapter

./: README.md  example.py  pyproject.toml
fdo_adapter/: descriptors.py  fdo_provider.py
